<resources>
    <string name="app_name">OnMyWay</string>
    <string name="content_description_logo">OnMyWay logo</string>
    <string name="content_description_splash_background">Splash screen background</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_login">Login</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_have_account">Don\'t have an account?</string>
    <string name="text_email">Email address</string>
    <string name="text_password">Password</string>
    <string name="title_activity_rider_map">Rider Map</string>
    <string name="title_activity_driver_map">Driver Map</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_main_activity">Test Activity</string>
    <string name="text_phone_number">Phone number</string>
    <string name="text_first_name">First name</string>
    <string name="text_last_name">Last name</string>
    <string name="text_back">Back</string>
    <string name="text_logout">Logout</string>
    <string name="content_description_profile_photo">Profile photo</string>
    <string name="placeholder_user_id">000000000000000000000000000</string>
    <string name="placeholder_user_type">-</string>
    <string name="symbol_star">★</string>
    <string name="placeholder_rating">4.8</string>
    <string name="text_delete_account">Delete account</string>
    <string name="confirm_price">Confirm Price</string>
    <string name="text_save">Save</string>
    <string name="view_details">View Details</string>
    <string name="text_full_name">Full name</string>
    <string name="new_price">Edit New Price</string>
    <string name="text_okay">Okay</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_edit">Edit</string>
    <string name="edit_price">Edit Price</string>
    <string name="price_estimate">Price Estimate</string>
    <string name="rider_map_activity">Rider Map Activity</string>
    <string name="rider_cost_activity">Rider Cost Activity</string>
    <string name="delete_account_message">Are you sure you want to delete your account permanently?\n\nThis is serious business!</string>
    <string name="text_cancel_ride">Cancel Ride</string>
    <string name="text_elapsed_time">Elapsed Time</string>
    <string name="placeholder_elapsed_time">00:00</string>
    <string name="label_driver">"Driver: "</string>
    <string name="label_rider">"Rider: "</string>
    <string name="label_start_location">"Start Location: "</string>
    <string name="label_end_location">"End Location: "</string>
    <string name="placeholder_none">None</string>
    <string name="text_request_ride">Request Ride</string>
    <string name="Price_in_">Price in $</string>
    <string name="text_find_nearby_riders">Find Nearby Riders</string>
    <string name="text_view_current_request">View Current Request</string>
    <string name="text_waiting_for_driver">Waiting for a driver…</string>
    <string name="text_view_previous_rides">View Previous Rides</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">The app does not have permission to use the Camera. Please go to settings and grant permission to use this feature.</string>
    <string name="ok">Okay</string>
    <string name="barcode_error_format">\"Error reading barcode: %1$s\"</string>
</resources>
