<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/activity_rider_map" />

    <LinearLayout
        android:id="@+id/price_dialogue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F5F5F5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/price_estimate"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/priceEstimate"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            android:gravity="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/confirm_price_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm_price" />

            <Button
                android:id="@+id/edit_price_button"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_price" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_priceEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#F5F5F5"
        android:gravity="top"
        android:orientation="horizontal"
        android:visibility="invisible">

        <EditText
            android:id="@+id/editText_price"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/new_price"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>
</RelativeLayout>
