<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="24dp"
    tools:context=".ShowRiderRequestFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upperConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash_screen_background"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonBack"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_arrow_back_white_24dp"
            android:elevation="6dp"
            android:text="@string/text_back"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textElapsedTime"
            android:layout_width="0dp"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/placeholder_elapsed_time"
            android:textColor="@android:color/white"
            android:textSize="72sp"
            app:layout_constraintBottom_toTopOf="@+id/labelElapsedTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelElapsedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/text_elapsed_time"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/labelDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_driver"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/labelStartLocation"
        app:layout_constraintTop_toBottomOf="@+id/upperConstraintLayout" />

    <TextView
        android:id="@+id/textDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/placeholder_none"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/labelDriver"
        app:layout_constraintTop_toBottomOf="@+id/upperConstraintLayout" />

    <TextView
        android:id="@+id/labelStartLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_start_location"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textStartLocation"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDriver" />

    <TextView
        android:id="@+id/textStartLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autoLink="email"
        android:text="@string/placeholder_none"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelStartLocation"
        app:layout_constraintTop_toBottomOf="@+id/textDriver" />

    <TextView
        android:id="@+id/labelEndLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_end_location"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/labelStartLocation"
        app:layout_constraintTop_toBottomOf="@+id/labelStartLocation" />

    <TextView
        android:id="@+id/textEndLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autoLink="phone"
        android:maxLength="15"
        android:text="@string/placeholder_none"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/labelEndLocation"
        app:layout_constraintTop_toBottomOf="@+id/textStartLocation" />

    <Button
        android:id="@+id/buttonCancelRide"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#F44336"
        android:backgroundTintMode="multiply"
        android:drawableStart="@drawable/ic_cancel_red_24dp"
        android:drawablePadding="4sp"
        android:elevation="6dp"
        android:text="@string/text_cancel_ride"
        android:textColor="@color/colorError"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEndLocation" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEndLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>